feat: add device blueprint info in workflow and entity response

--- a/services/workflow/pom.xml
+++ b/services/workflow/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>workflow-manager</module>
         <module>workflow-service</module>
+        <module>workflow-api</module>
     </modules>
 
     <properties>
