--- a/services/entity/entity-service/pom.xml
+++ b/services/entity/entity-service/pom.xml
@@ -96,6 +96,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>workflow-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <version>6.0.0</version>
