--- a/services/workflow/workflow-manager/pom.xml
+++ b/services/workflow/workflow-manager/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>blueprint-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>workflow-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
