refactor: regular the char case of enum

--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -225,7 +225,7 @@ application:
 blueprint:
   library:
     default_address:
-      type: Github
+      type: GITHUB
       url: https://github.com/zakersimonjack/beaver-iot-blueprint.git
       branch: main
     sync_frequency: 3h
