Auto clean unused blueprint library versions

--- a/services/blueprint/blueprint-service/pom.xml
+++ b/services/blueprint/blueprint-service/pom.xml
@@ -123,6 +123,16 @@
         </dependency>
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>device-template-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>device-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
             <artifactId>data-jpa</artifactId>
             <version>${project.version}</version>
         </dependency>
