Feature: Introduced device location when adding devices

--- a/services/entity-template/entity-template-service/src/main/resources/entity-template.yml
+++ b/services/entity-template/entity-template-service/src/main/resources/entity-template.yml
@@ -24,6 +24,14 @@ entity-template:
         - identifier: '@longitude'
           name: ${ fn.i18n('entity-template-service.entity.location.children.longitude.name') }
           value_type: double
+          attributes:
+            min: -180
+            max: 180
+            unit: '°'
         - identifier: '@latitude'
           name: ${ fn.i18n('entity-template-service.entity.location.children.latitude.name') }
           value_type: double
+          attributes:
+            min: -90
+            max: 90
+            unit: '°'
