--- a/services/permission/permission-api/pom.xml
+++ b/services/permission/permission-api/pom.xml
@@ -45,6 +45,14 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>eu.ciechanowiec</groupId>
+            <artifactId>sneakyfun</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
