--- a/extension-components/data-components/data-timeseries/repository/pom.xml
+++ b/extension-components/data-components/data-timeseries/repository/pom.xml
@@ -44,6 +44,11 @@
     <dependencies>
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>context</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
             <artifactId>data-api</artifactId>
             <version>${project.version}</version>
         </dependency>
