Feature: Fall back to the local zip file if the default blueprint library is unreachable

--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -228,6 +228,7 @@ blueprint:
       type: GITHUB
       url: https://github.com/zakersimonjack/beaver-iot-blueprint.git
       branch: main
+      local_zip_file: ${BLUEPRINT_LIBRARY_DEFAULT_ADDRESS_LOCAL_ZIP_FILE:}
     sync_frequency: 3h
     clean_frequency: 1d
 
