--- a/application/application-standard/src/main/resources/db/h2/changelog.yaml
+++ b/application/application-standard/src/main/resources/db/h2/changelog.yaml
@@ -17,3 +17,6 @@ databaseChangeLog:
   - includeAll:
       path: sql/v1.3.0
       relativeToChangelogFile: true
+  - includeAll:
+      path: sql/v1.3.1
+      relativeToChangelogFile: true
