--- a/services/entity/entity-service/pom.xml
+++ b/services/entity/entity-service/pom.xml
@@ -110,6 +110,11 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>resource-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!--  Testing  -->
         <dependency>
