--- a/services/resource-manager/resource-api/pom.xml
+++ b/services/resource-manager/resource-api/pom.xml
@@ -22,6 +22,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>context</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
