Feature: Add a common language module that supports invoking language-specific operations, such as converting complex-type objects to language-native objects based on the target scripting language.

--- a/core/rule-engine/rule-engine-components/pom.xml
+++ b/core/rule-engine/rule-engine-components/pom.xml
@@ -99,6 +99,10 @@
             <artifactId>scheduler</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>base</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
