The entity supports rounding its value by fraction digits and validating the rounded result.

--- a/services/entity-template/entity-template-service/src/main/resources/entity-template.yml
+++ b/services/entity-template/entity-template-service/src/main/resources/entity-template.yml
@@ -23,6 +23,7 @@ entity-template:
             min: -90
             max: 90
             unit: '°'
+            fraction_digits: 6
         - identifier: '@longitude'
           name: ${ fn.i18n('entity-template-service.entity.location.children.longitude.name') }
           value_type: double
@@ -31,6 +32,7 @@ entity-template:
             min: -180
             max: 180
             unit: '°'
+            fraction_digits: 6
         - identifier: '@address'
           name: ${ fn.i18n('entity-template-service.entity.location.children.address.name') }
           value_type: string
