--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
                 <version>3.0.0-M7</version>
                 <configuration>
                     <!--suppress UnresolvedMavenProperty -->
-                    <argLine>${argLine} -ea -XX:TieredStopAtLevel=1 -Xmx2048M -Xms2048m
+                    <argLine>${argLine} -ea -XX:TieredStopAtLevel=1 -Xmx2048M -Xms2048m -noverify
                         -Dspring.profiles.include=${spring.profiles.active}
                     </argLine>
                     <failIfNoTests>false</failIfNoTests>
