chore: optimize the delayed queue and implement unit tests (#487)
* Optimize DelayedTask thread safety by using ConcurrentHashMap and improve encapsulation with proper access modifiers.
Add null pointer check in BaseDelayedQueue consumer loop and comprehensive unit tests.
Fix hardcoded device keys in DeviceStatusServiceTest to use proper key generation.

* Fix compilation warnings

* rollback the `-noverify` setting from configuration of `maven-surefire-plugin`

* Remove temp test files

--- a/beaver-iot-parent/pom.xml
+++ b/beaver-iot-parent/pom.xml
@@ -400,6 +400,10 @@
     <dependencies>
         <!-- test dependencies -->
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-core</artifactId>
             <scope>test</scope>
@@ -438,6 +442,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
