--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -54,20 +54,22 @@ spring:
         '[resource:data-pre-sign]': ${resource.pre_sign_expire}
         '[resource:data]': 2m
         '[entity:latest-value]': 15m
-
+  data:
+    redis:
+      ssl:
+        enabled: ${REDIS_SSL:false}
+      host: ${REDIS_HOST:}
+      password: ${REDIS_PASSWORD:}
+      port: ${REDIS_PORT:6379}
+      database: ${REDIS_DB:0}
   redis:
-    ssl: ${REDIS_SSL:false}
-    host: ${REDIS_HOST:}
-    password: ${REDIS_PASSWORD:}
-    port: ${REDIS_PORT:6379}
-    database: ${REDIS_DB:0}
     redisson:
       config: |
         singleServerConfig:
-          address: "${spring.redis.host}"
-          password: "${spring.redis.password}"
+          address: "${spring.data.redis.host}"
+          password: "${spring.data.redis.password}"
           clientName: null
-          database: ${REDIS_DB:0}
+          database: ${spring.data.redis.database}
           idleConnectionTimeout: 10000
           connectTimeout: 10000
           timeout: 10000
@@ -246,7 +248,7 @@ timeseries:
   #  endpoint: ${TIMESERIES_DYNAMODB_ENDPOINT:http://localhost:8000}
   #  region: ${TIMESERIES_DYNAMODB_REGION:us-east-1}
   #  access_id: ${TIMESERIES_DYNAMODB_ACCESS_ID:defaultAccessId}
-  #  access_KEY: ${TIMESERIES_DYNAMODB_ACCESS_KEY:defaultAccessKey}
+  #  access_key: ${TIMESERIES_DYNAMODB_ACCESS_KEY:defaultAccessKey}
 
 
 logging:
