--- a/application/application-standard/src/test/resources/application.yml
+++ b/application/application-standard/src/test/resources/application.yml
@@ -49,20 +49,22 @@ spring:
         '[dashboard:permission]': 1h
         '[integration:permission]': 1h
         '[entity:latest-value]': 15m
-
+  data:
+    redis:
+      ssl:
+        enabled: ${REDIS_SSL:false}
+      host: ${REDIS_HOST:}
+      password: ${REDIS_PASSWORD:}
+      port: ${REDIS_PORT:6379}
+      database: ${REDIS_DB:0}
   redis:
-    ssl: ${REDIS_SSL:false}
-    host: ${REDIS_HOST:}
-    password: ${REDIS_PASSWORD:}
-    port: ${REDIS_PORT:6379}
-    database: ${REDIS_DB:0}
     redisson:
       config: |
         singleServerConfig:
-          address: "${spring.redis.host}"
-          password: "${spring.redis.password}"
+          address: "${spring.data.redis.host}"
+          password: "${spring.data.redis.password}"
           clientName: null
-          database: ${REDIS_DB:0}
+          database: ${spring.data.redis.database}
           idleConnectionTimeout: 10000
           connectTimeout: 10000
           timeout: 10000
