--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -192,6 +192,7 @@ oauth2:
   registered-client-id: ${OAUTH2_REGISTERED_CLIENT_ID:default}
   client-id: ${OAUTH2_CLIENT_ID:iab}
   client-secret: ${OAUTH2_CLIENT_SECRET:milesight*iab}
+  refresh-cool-down: ${OAUTH2_REFRESH_COOL_DOWN:1m}
   rsa:
     private-key: ${OAUTH2_RSA_PRIVATE_KEY:}
     public-key: ${OAUTH2_RSA_PUBLIC_KEY:}
